heap 参数检查